# txm

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml  todo-to-issue.yml
src/: ast.rs  error.rs  glyph.rs  layout.rs  lib.rs  main.rs  parser.rs  ratatui.rs  render.rs  style.rs  token.rs
tests/: ratatui.rs  smoke.rs
